tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__raster__raster_from_table.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[Raster[Table[Mod[i, j]/3, {i, 4}, {j, 4}] // N]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<rect x="13.33" y="263.33" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="96.67" y="263.33" width="83.33" height="83.33" fill="rgb(85,85,85)"/>
<rect x="180.00" y="263.33" width="83.33" height="83.33" fill="rgb(85,85,85)"/>
<rect x="263.33" y="263.33" width="83.33" height="83.33" fill="rgb(85,85,85)"/>
<rect x="13.33" y="180.00" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="96.67" y="180.00" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="180.00" y="180.00" width="83.33" height="83.33" fill="rgb(170,170,170)"/>
<rect x="263.33" y="180.00" width="83.33" height="83.33" fill="rgb(170,170,170)"/>
<rect x="13.33" y="96.67" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="96.67" y="96.67" width="83.33" height="83.33" fill="rgb(85,85,85)"/>
<rect x="180.00" y="96.67" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="263.33" y="96.67" width="83.33" height="83.33" fill="rgb(255,255,255)"/>
<rect x="13.33" y="13.33" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="96.67" y="13.33" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
<rect x="180.00" y="13.33" width="83.33" height="83.33" fill="rgb(85,85,85)"/>
<rect x="263.33" y="13.33" width="83.33" height="83.33" fill="rgb(0,0,0)"/>
</g>
</svg>
