tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__raster__raster_grayscale.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[Raster[{{0, 0.5, 1}, {1, 0.5, 0}}]]\")"
---
<svg width="360" height="240" viewBox="0 0 360 240" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x240"><rect x="0" y="0" width="360.00" height="240.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x240)">
<rect x="13.33" y="120.00" width="111.11" height="111.11" fill="rgb(0,0,0)"/>
<rect x="124.44" y="120.00" width="111.11" height="111.11" fill="rgb(128,128,128)"/>
<rect x="235.56" y="120.00" width="111.11" height="111.11" fill="rgb(255,255,255)"/>
<rect x="13.33" y="8.89" width="111.11" height="111.11" fill="rgb(255,255,255)"/>
<rect x="124.44" y="8.89" width="111.11" height="111.11" fill="rgb(128,128,128)"/>
<rect x="235.56" y="8.89" width="111.11" height="111.11" fill="rgb(0,0,0)"/>
</g>
</svg>
